--- a/ci/azure/templates/stages.yaml
+++ b/ci/azure/templates/stages.yaml
@@ -1,6 +1,7 @@
 parameters:
   operating_systems: ''
   name: ''
+  enable_publish: false
 
 stages:
   - stage: ${{ parameters.name }}
@@ -106,27 +107,28 @@ stages:
     #        env:
     #          CODECOV_TOKEN: $(CODECOV_TOKEN)
 
-    #  - job: publish
-    #    displayName: Publish
-    #    dependsOn: test
-    #    pool:
-    #      vmImage: 'ubuntu-16.04'
-    #    steps:
-    #      - task: UsePythonVersion@0
-    #        inputs:
-    #          versionSpec: 3.7
-    #          architecture: x64
-    #      - task: DownloadBuildArtifacts@0
-    #        inputs:
-    #          artifactName: 'dist'
-    #          downloadPath: $(System.DefaultWorkingDirectory)
-    #      - bash: |
-    #          python -m venv venv
-    #          venv/bin/pip install twine
-    #        displayName: Build venv
-    #      - bash: |
-    #          venv/bin/python ci/twineontag.py
-    #        env:
-    #          TWINE_USERNAME: $(TWINE_USERNAME)
-    #          TWINE_PASSWORD: $(TWINE_PASSWORD)
-    #        displayName: Twine On Tag
+      - job: publish
+        displayName: Publish
+        dependsOn: test
+        condition: ${{ parameters.enable_publish }}
+        pool:
+          vmImage: 'ubuntu-16.04'
+        steps:
+          - task: UsePythonVersion@0
+            inputs:
+              versionSpec: 3.7
+              architecture: x64
+          - task: DownloadBuildArtifacts@0
+            inputs:
+              artifactName: 'dist'
+              downloadPath: $(System.DefaultWorkingDirectory)
+          - bash: |
+              python -m venv venv
+              venv/bin/pip install twine
+            displayName: Build venv
+          - bash: |
+              venv/bin/python ci/twineontag.py
+            env:
+              TWINE_USERNAME: $(TWINE_USERNAME)
+              TWINE_PASSWORD: $(TWINE_PASSWORD)
+            displayName: Twine On Tag
