--- a/ci/azure/templates/stages.yaml
+++ b/ci/azure/templates/stages.yaml
@@ -1,7 +1,8 @@
 parameters:
-  operating_systems: ''
+  matrix_options: ''
   name: ''
   enable_publish: false
+
 
 stages:
   - stage: ${{ parameters.name }}
@@ -17,14 +18,14 @@ stages:
         displayName: Generate Test Matrix
         steps:
           - bash: |
-              python ci/matrix.py
+              python ci/matrix.py ${{ parameters.matrix_options }}
             name: generate_test_matrix
 
       - job: generate_build_matrix
         displayName: Generate Build Matrix
         steps:
           - bash: |
-              python ci/matrix.py --environment 'Linux-CPython-37-x86_64|macOS-CPython-37-x86_64|Windows-CPython-37-x86_64'
+              python ci/matrix.py --windows linux --windows macos --platform windows --interpreter cpython --version 3.7 --architecture x86_64
             name: generate_build_matrix
 
       - job: sdist
