--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,4 +2,4 @@ stages:
   - template: ci/azure/templates/stages.yaml
     parameters:
       name: hello
-      matrix_options: --windows linux --windows macos --interpreter cpython --version 3.6 --version 3.7 --architecture x86_64
+      matrix_options: --platform linux --platform macos --interpreter cpython --version 3.6 --version 3.7 --architecture x86_64
